--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,25 @@
-sudo: required
-dist: trusty
 language: php
-
-# Versi PHP
 php:
   - 7.2
 
-# Branch yang digunakan
-branches:
-  only:
-    - master #-> QA/Staging server
-
-# Build
 before_script:
-  - cp .env.travis .env
+  - composer self-update
+  - travis_retry composer install --prefer-source --no-interaction --dev
+  - cp .env.example .env
+  - php artisan key:generate
+  - composer require willvincent/laravel-rateable
 
-# Test
+script: phpunit
+
+matrix:
+  allow_failures:
+    - php: 7.2
+    - php: hhvm
+  fast_finish: true
+
+notifications:
+    on_success: never
+    on_failure: always
+
 script:
-  - ./vendor/bin/phpunit
-
-# deploy
-after_success:
+  - vendor/bin/phpunit
